# machine-learning-zoomcamp

./: pyproject.toml
01-intro/: 01-homework.ipynb
02-regression/: 02-homework.ipynb
03-classification/: 03-homework.ipynb
04-evaluation/: 04-homework.ipynb
05-deployment/: 05-homework.ipynb  Dockerfile  predict.py  predict_test.py  pyproject.toml
